# Viability_IK

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Config.cmake.in
examples/: CMakeLists.txt  example_cxx.cpp  example_py.py
include/: scip_exception.hpp  viability_ik.h
src/: CMakeLists.txt  MILPSolver.cpp  MILPSolver.h  bindings.cpp  scip_exception.h  viability_ik.cpp  viability_ik.h
src/eigen-cddlib/: Polyhedron.cpp  Polyhedron.h
